data/derived/sp14/progs/unify/prog3811.ml.out
Characters 111-127:
  reverseHelper [];;
  ^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a list -> 'a list
